--- a/index.html
+++ b/index.html
@@ -5,52 +5,52 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
-  <header class="aaa">
-    <img src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+<body class="body">
+  <header class="header">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
+    <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="centered-main-page-element">
-    <section id="topSectionForAddingElementToList">
-      <h3>Add Item</h3>
-      <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
+  <main class="main">
+    <section class="section">
+      <h3 class="section__title section__title_add">Add Item</h3>
+      <div class="task-wrapper">
+        <input class="input input_text input_text_new-task" id="new-task" type="text">
+        <button class="button button_add">Add</button>
        </div>
     </section>
-    <section>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete">
+    <section class="section">
+      <h3 class="section__title">Todo</h3>
+      <ul class="list list_incomplited" id="incompleted">
+        <li class="list__item">
+          <input class="input input_checkbox" type="checkbox">
+          <label class="label">Pay Bills</label>
+          <input class="input input_text" type="text">
+          <button class="button button_edit">Edit</button>
+          <button class="button button_delete">
+            <img class="button__img" src="./remove.svg" alt="delete">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete">
+        <li class="list__item list__item_edit-mode">
+          <input class="input input_checkbox" type="checkbox">
+          <label class="label">Go Shopping</label>
+          <input class="input input_text" type="text" value="Go Shopping">
+          <button class="button button_edit">Save</button>
+          <button class="button button_delete">
+            <img class="button__img" src="./remove.svg" alt="delete">
           </button>
         </li>
       </ul>
     </section>
-    <section>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete">
+    <section class="section">
+      <h3 class="section__title">Completed</h3>
+      <ul class="list list_complited" id="completed">
+        <li class="list__item">
+          <input class="input input_checkbox" type="checkbox" checked>
+          <label class="label">See the Doctor</label>
+          <input class="input input_text" type="text">
+          <button class="button button_edit">Edit</button>
+          <button class="button button_delete">
+            <img class="button__img" src="./remove.svg" alt="delete">
           </button>
         </li>
       </ul>
