--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
     <section class="section">
       <h3 class="section__title">Completed</h3>
-      <ul class="list list_complited" id="completed">
+      <ul class="list list_completed" id="completed">
         <li class="list__item">
           <input class="input input_checkbox" type="checkbox" checked>
           <label class="label">See the Doctor</label>
